# lawsy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  generate_report.py  pyproject.toml
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: cd.yaml  ci.yaml
.streamlit/: config.toml
src/kokkai_crawler/: main.py
src/lawsy/: main.py
src/lawsy/ai/: mindmap_maker.py  news_query_maker.py  outline_creater.py  query_expander.py  query_refiner.py  report_writer.py  violation_summarizer.py
src/lawsy/ai/utils/: get_news_funcs.py  stream_writer.py
src/lawsy/app/: Dockerfile  app.py  config.py  page.py  report.py  research.py
src/lawsy/app/styles/: decorate_html.py  style.css
src/lawsy/app/utils/: cookie.py  history.py  lm.py  mindmap.py  preload.py  web_retreiver.py
src/lawsy/chunker/: article_chunker.py
src/lawsy/data/: egov_xml_processor.py  pharma_law_downloader.py
src/lawsy/encoder/: me5.py  openai.py
src/lawsy/parser/: parser.py
src/lawsy/reranker/: rrf.py
src/lawsy/retriever/: search_result.py
src/lawsy/retriever/article_search/: faiss.py
src/lawsy/retriever/web_search/: duckduckgo_search.py  google_search.py  tavily_search.py
src/lawsy/utils/: logging.py
