[project]
name = "law-dx-hackathon-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "jupyterlab>=4.3.4",
    "loguru>=0.7.3",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.391",
    "ruff>=0.8.4",
]

[tool.ruff]
target-version = "py39"
include = ["*.py"]
line-length = 119

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "PIE",
  # "N",
]
ignore = [
       "E266",  # too many leading '#' for block comment (E266)
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["anpr", "constants", "lott_inference", "main", "queue_handlers", "socket_server", "tf", "util"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
